--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/serve-static": "^5.0.3",
+    "@types/multer": "^1.4.12",
+    "buffer-to-stream": "^1.0.0",
+    "cloudinary": "^1.41.3",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
